Imported local version with updated

--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -31,14 +31,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing the necessary libraries and setting up the environment\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams.update({\"axes.grid\":True,\"grid.color\":\"black\",\"grid.alpha\":\"0.25\",\"grid.linestyle\":\"--\"})\n",
+    "plt.rcParams.update({'font.size': 14})\n",
     "\n",
     "# autoreload modules when code is run. Otherwise, python will not see recent changes. \n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "# Import your own code\n",
-    "import inauguralproject"
+    "from ExchangeEconomy import ExchangeEconomyClass"
    ]
   },
   {
@@ -69,11 +73,42 @@
     }
    ],
    "source": [
-    "# code for solving the model (remember documentation and comments)\n",
+    "model = ExchangeEconomyClass()\n",
+    "par = model.par\n",
     "\n",
-    "a = np.array([1,2,3])\n",
-    "b = inauguralproject.square(a)\n",
-    "print(b)"
+    "# a. total endowment\n",
+    "w1bar = 1.0\n",
+    "w2bar = 1.0\n",
+    "\n",
+    "# b. figure set up\n",
+    "fig = plt.figure(frameon=False,figsize=(6,6), dpi=100)\n",
+    "ax_A = fig.add_subplot(1, 1, 1)\n",
+    "\n",
+    "ax_A.set_xlabel(\"$x_1^A$\")\n",
+    "ax_A.set_ylabel(\"$x_2^A$\")\n",
+    "\n",
+    "temp = ax_A.twinx()\n",
+    "temp.set_ylabel(\"$x_2^B$\")\n",
+    "ax_B = temp.twiny()\n",
+    "ax_B.set_xlabel(\"$x_1^B$\")\n",
+    "ax_B.invert_xaxis()\n",
+    "ax_B.invert_yaxis()\n",
+    "\n",
+    "# A\n",
+    "ax_A.scatter(par.w1A,par.w2A,marker='s',color='black',label='endowment')\n",
+    "\n",
+    "# limits\n",
+    "ax_A.plot([0,w1bar],[0,0],lw=2,color='black')\n",
+    "ax_A.plot([0,w1bar],[w2bar,w2bar],lw=2,color='black')\n",
+    "ax_A.plot([0,0],[0,w2bar],lw=2,color='black')\n",
+    "ax_A.plot([w1bar,w1bar],[0,w2bar],lw=2,color='black')\n",
+    "\n",
+    "ax_A.set_xlim([-0.1, w1bar + 0.1])\n",
+    "ax_A.set_ylim([-0.1, w2bar + 0.1])    \n",
+    "ax_B.set_xlim([w1bar + 0.1, -0.1])\n",
+    "ax_B.set_ylim([w2bar + 0.1, -0.1])\n",
+    "\n",
+    "ax_A.legend(frameon=True,loc='upper right',bbox_to_anchor=(1.6,1.0));"
    ]
   },
   {
