--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,16 +181,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explain your code and procedure"
+    "In this question, we calculate the error in market clearing when $p_1 \\in \\mathcal{P}_1=\\left\\{0.5,0.5+2 \\frac{1}{N}, 0.5+2 \\frac{2}{N}, \\ldots, 2.5\\right\\}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.37088948787062004"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# code"
+    "start, N = 0.5, 75\n",
+    "p1 = [start + 2.0*i/N for i in range(N + 1)]\n",
+    "\n",
+    "error1 = np.zeros([N])\n",
+    "error2 = np.zeros([N])\n",
+    "\n",
+    "for i in range(N):\n",
+    "    error1[i], error2[i] = model.check_market_clearing(p1[i])\n",
+    "\n",
+    "model.check_market_clearing(p1[i])[0]"
    ]
   },
   {
@@ -204,17 +224,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explain your code and procedure"
+    "Using Walras' law, we know that if one market clears, the other market will also clear.This implies that we can solve the root-finding problem $\\epsilon_1(\\boldsymbol{p}, \\boldsymbol{\\omega})=0$ i.e. market 1 will clear. Then we know, that market 2 will also be clearing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in equilibrium (-1.8934853684982045e-13, 1.7896795156957523e-13) with equilbrium price p_1 = 0.94444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import optimize\n",
+    "obj = lambda p1: model.check_market_clearing(p1)[0] # here the input is a scalar\n",
+    "res = optimize.root_scalar(obj,bracket=(1e-8,10),method='bisect')\n",
+    "x = res.root\n",
+    "error_equilibrium = model.check_market_clearing(res.root)\n",
+    "print(f'Error in equilibrium {error_equilibrium} with equilbrium price p_1 = {x:.8f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 4a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# code"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
