--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -27,9 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing the necessary libraries and setting up the environment\n",
     "import numpy as np\n",
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -186,23 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.37088948787062004"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "start, N = 0.5, 75\n",
-    "p1 = [start + 2.0*i/N for i in range(N + 1)]\n",
+    "p1 = np.array([start + 2.0*i/N for i in range(N + 1)])\n",
     "\n",
     "error1 = np.zeros([N])\n",
     "error2 = np.zeros([N])\n",
@@ -210,7 +208,7 @@
     "for i in range(N):\n",
     "    error1[i], error2[i] = model.check_market_clearing(p1[i])\n",
     "\n",
-    "model.check_market_clearing(p1[i])[0]"
+    "# print(error1, p1)"
    ]
   },
   {
@@ -229,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -265,10 +263,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal price for agent A is 2.50000000 with utility 0.74168595\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the demand for agent B given the prices in p1\n",
+    "x1B, x2B = model.demand_B(p1)\n",
+    "\n",
+    "# Applying a boolean mask to ensure that the values of x1B and x2B are within the unit interval\n",
+    "x1B[x1B > 1] = np.nan\n",
+    "x2B[x2B > 1] = np.nan\n",
+    "\n",
+    "# Calculate the utility for agent A given agent B's demand\n",
+    "utilityA = model.utility_A(1 - x1B,1 - x2B)\n",
+    "\n",
+    "# Finding the maximum utility and the corresponding index (Using nanmax and nanargmax to handle NaN values)\n",
+    "utilityA_max = np.nanmax(utilityA)\n",
+    "index = np.nanargmax(utilityA)\n",
+    "\n",
+    "# Finding the optimal price for agent A to choose\n",
+    "p1_opt_A = p1[index]\n",
+    "print(f'Optimal price for agent A is {p1_opt_A:.8f} with utility {utilityA_max:.8f}')"
+   ]
   },
   {
    "cell_type": "markdown",
