--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -298,6 +298,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 4b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "ADD CONCISE CONLUSION."
    ]
   }
@@ -318,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   },
   "toc-autonumbering": true,
   "vscode": {
