Work on question 4b

--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -301,10 +301,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal quantities of goods 1 and 2: [0.68754098 1.83322405]\n",
+      "Optimal utility: 1.0802013405672397\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from scipy.optimize import minimize\n",
+    "\n",
+    "# # Define parameters\n",
+    "# alpha = 1/3\n",
+    "# beta = 2/3\n",
+    "# p2 = 1  # Price of the second good\n",
+    "\n",
+    "# # Define utility function (Cobb-Douglas)\n",
+    "# def utility(x):\n",
+    "#     x1 = x[0]  # Quantity of good 1\n",
+    "#     x2 = x[1]  # Quantity of good 2\n",
+    "#     return -(x1**alpha * x2**(1-beta))  # Negative sign for maximization\n",
+    "\n",
+    "# # Define constraints\n",
+    "# def budget_constraint(x):\n",
+    "#     return 0.8 * x[0] + 0.3 * x[1] - (0.8 + 0.3)  # Total endowment equals total consumption\n",
+    "\n",
+    "# constraints = ({'type': 'eq', 'fun': budget_constraint})\n",
+    "\n",
+    "# # Define initial guess\n",
+    "# x0 = [0.5, 0.5]  # Initial guess for quantities of goods 1 and 2\n",
+    "\n",
+    "# # Perform optimization\n",
+    "# result = minimize(utility, x0, constraints=constraints)\n",
+    "\n",
+    "# # Print results\n",
+    "# print(\"Optimal quantities of goods 1 and 2:\", result.x)\n",
+    "# print(\"Optimal utility:\", -result.fun)  # Reverse the sign back to positive"
+   ]
   },
   {
    "cell_type": "markdown",
