--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -27,18 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the necessary libraries and setting up the environment\n",
     "import numpy as np\n",
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -301,47 +292,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal quantities of goods 1 and 2: [0.68754098 1.83322405]\n",
-      "Optimal utility: 1.0802013405672397\n"
+      "Optimal quantities of goods 1 and 2. x1 = (1.00001, x2 = 0.99997)\n",
+      "Optimal utility: -1.6044245159369763e-10\n"
      ]
     }
    ],
    "source": [
-    "# from scipy.optimize import minimize\n",
+    "from scipy.optimize import minimize\n",
     "\n",
-    "# # Define parameters\n",
-    "# alpha = 1/3\n",
-    "# beta = 2/3\n",
-    "# p2 = 1  # Price of the second good\n",
+    "# Define parameters\n",
+    "alpha = 1/3\n",
+    "beta = 2/3\n",
     "\n",
-    "# # Define utility function (Cobb-Douglas)\n",
-    "# def utility(x):\n",
-    "#     x1 = x[0]  # Quantity of good 1\n",
-    "#     x2 = x[1]  # Quantity of good 2\n",
-    "#     return -(x1**alpha * x2**(1-beta))  # Negative sign for maximization\n",
+    "# Define utility function\n",
+    "def utility(x):\n",
+    "    x1 = x[0]  # Quantity of good 1\n",
+    "    x2 = x[1]  # Quantity of good 2\n",
+    "    return -(1 - x1**beta) * (1 - x2**beta)  # Negative sign for maximization\n",
     "\n",
-    "# # Define constraints\n",
-    "# def budget_constraint(x):\n",
-    "#     return 0.8 * x[0] + 0.3 * x[1] - (0.8 + 0.3)  # Total endowment equals total consumption\n",
+    "# Define constraints\n",
+    "def budget_constraint(x):\n",
+    "    return 0.8 * x[0] + 0.3 * x[1] - (0.8 + 0.3)  # Total endowment equals total consumption\n",
     "\n",
-    "# constraints = ({'type': 'eq', 'fun': budget_constraint})\n",
+    "constraints = ({'type': 'eq', 'fun': budget_constraint})\n",
     "\n",
-    "# # Define initial guess\n",
-    "# x0 = [0.5, 0.5]  # Initial guess for quantities of goods 1 and 2\n",
+    "# Define initial guess\n",
+    "x0 = [0.5, 0.5]  # Initial guess for quantities of goods 1 and 2\n",
     "\n",
-    "# # Perform optimization\n",
-    "# result = minimize(utility, x0, constraints=constraints)\n",
+    "# Perform optimization\n",
+    "result = minimize(utility, x0, constraints=constraints)\n",
     "\n",
-    "# # Print results\n",
-    "# print(\"Optimal quantities of goods 1 and 2:\", result.x)\n",
-    "# print(\"Optimal utility:\", -result.fun)  # Reverse the sign back to positive"
+    "# Print results using f-strings\n",
+    "optimal_x1, optimal_x2 = result.x\n",
+    "optimal_utility = -result.fun  # Reverse the sign back to positive\n",
+    "print(f\"Optimal quantities of goods 1 and 2. x1 = ({optimal_x1:.5f}, x2 = {optimal_x2:.5f})\")\n",
+    "print(f\"Optimal utility: {optimal_utility}\")\n"
    ]
   },
   {
