--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -292,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal quantities of goods 1 and 2. x1 = (1.00001, x2 = 0.99997)\n",
-      "Optimal utility: -1.6044245159369763e-10\n"
+      "Optimal price: 3.500\n",
+      "Optimal utility: -0.499\n"
      ]
     }
    ],
@@ -312,28 +312,73 @@
     "beta = 2/3\n",
     "\n",
     "# Define utility function\n",
-    "def utility(x):\n",
-    "    x1 = x[0]  # Quantity of good 1\n",
-    "    x2 = x[1]  # Quantity of good 2\n",
-    "    return -(1 - x1**beta) * (1 - x2**beta)  # Negative sign for maximization\n",
+    "def utility(p):\n",
+    "    x1,x2 = model.demand_B(p)  # Quantity of good 1\n",
     "\n",
-    "# Define constraints\n",
-    "def budget_constraint(x):\n",
-    "    return 0.8 * x[0] + 0.3 * x[1] - (0.8 + 0.3)  # Total endowment equals total consumption\n",
-    "\n",
-    "constraints = ({'type': 'eq', 'fun': budget_constraint})\n",
+    "    return model.utility_A(x1,x2) # Negative sign for maximization\n",
     "\n",
     "# Define initial guess\n",
-    "x0 = [0.5, 0.5]  # Initial guess for quantities of goods 1 and 2\n",
+    "p0 = [0.5]  # Initial guess for quantities of goods 1 and 2\n",
     "\n",
     "# Perform optimization\n",
-    "result = minimize(utility, x0, constraints=constraints)\n",
+    "result = minimize(utility, p0)\n",
     "\n",
     "# Print results using f-strings\n",
-    "optimal_x1, optimal_x2 = result.x\n",
+    "optimal_p = result.x[0]\n",
     "optimal_utility = -result.fun  # Reverse the sign back to positive\n",
-    "print(f\"Optimal quantities of goods 1 and 2. x1 = ({optimal_x1:.5f}, x2 = {optimal_x2:.5f})\")\n",
-    "print(f\"Optimal utility: {optimal_utility}\")\n"
+    "print(f\"Optimal price: {optimal_p:.3f}\")\n",
+    "print(f\"Optimal utility: {optimal_utility:.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 5A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal price: 0.632\n",
+      "Optimal utility: -0.621\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "# Define parameters\n",
+    "alpha = 1/3\n",
+    "beta = 2/3\n",
+    "\n",
+    "# Define utility function\n",
+    "def utility(p):\n",
+    "    x1,x2 = model.demand_B(p)  # Quantity of good 1\n",
+    "    u = model.utility_A(x1,x2)\n",
+    "    if model.utility_A(x1,x2) < model.utility_A(par.w1A,par.w2A):\n",
+    "        u = -np.nan\n",
+    "    \n",
+    "    \n",
+    "    return u # Negative sign for maximization\n",
+    "\n",
+    "# Define initial guess\n",
+    "p0 = [0.5]  # Initial guess for quantities of goods 1 and 2\n",
+    "\n",
+    "# Perform optimization\n",
+    "result = minimize(utility, p0,method='nelder-mead')\n",
+    "\n",
+    "# Print results using f-strings\n",
+    "optimal_p = result.x[0]\n",
+    "optimal_utility = -result.fun  # Reverse the sign back to positive\n",
+    "print(f\"Optimal price: {optimal_p:.3f}\")\n",
+    "print(f\"Optimal utility: {optimal_utility:.3f}\")\n"
    ]
   },
   {
