--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -338,16 +338,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 5B"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal price: 0.632\n",
-      "Optimal utility: -0.621\n"
+      "Optimal price: 0.375\n",
+      "Optimal utility: -0.598\n",
+      "(0.5333333333333333, 0.39999999999999997)\n"
      ]
     }
    ],
@@ -360,13 +368,14 @@
     "\n",
     "# Define utility function\n",
     "def utility(p):\n",
-    "    x1,x2 = model.demand_B(p)  # Quantity of good 1\n",
+    "    x1,x2 = model.demand_A(p)  # Quantity of good 1\n",
+    "    \n",
     "    u = model.utility_A(x1,x2)\n",
-    "    if model.utility_A(x1,x2) < model.utility_A(par.w1A,par.w2A):\n",
+    "    if model.utility_A(1-x1,1-x2) < model.utility_A(par.w1A,par.w2A):\n",
     "        u = -np.nan\n",
     "    \n",
-    "    \n",
     "    return u # Negative sign for maximization\n",
+    "\n",
     "\n",
     "# Define initial guess\n",
     "p0 = [0.5]  # Initial guess for quantities of goods 1 and 2\n",
@@ -378,7 +387,8 @@
     "optimal_p = result.x[0]\n",
     "optimal_utility = -result.fun  # Reverse the sign back to positive\n",
     "print(f\"Optimal price: {optimal_p:.3f}\")\n",
-    "print(f\"Optimal utility: {optimal_utility:.3f}\")\n"
+    "print(f\"Optimal utility: {optimal_utility:.3f}\")\n",
+    "print(model.demand_A(optimal_p))"
    ]
   },
   {
