--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -369,10 +369,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The allocation is for agent A: x1 = 0.58108108, x2 = 0.25675676\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming the list of tuples is stored in the variable 'pareto_improve'\n",
+    "x1A_c, x2A_c = zip(*pareto_improve)\n",
+    "x1A_c, x2A_c = np.array(x1A_c).flatten(), np.array(x2A_c).flatten() # Flattening the list of tuples\n",
+    "\n",
+    "utilityA_c = model.utility_A(x1A_c,x2A_c)\n",
+    "# print(utilityA_c)\n",
+    "\n",
+    "# # Finding the maximum utility and the corresponding index (Using nanmax and nanargmax to handle NaN values)\n",
+    "utilityA_max_c = np.max(utilityA_c)\n",
+    "index_c = np.argmax(utilityA_c)\n",
+    "print(f'The allocation is for agent A: x1 = {1-x1A_c[index]:.8f}, x2 = {1-x2A_c[index]:.8f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,6 +400,13 @@
    "source": [
     "## Question 5B"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -426,6 +453,69 @@
     "print(f\"Optimal price: {optimal_p:.3f}\")\n",
     "print(f\"Optimal utility: {optimal_utility:.3f}\")\n",
     "print(model.demand_A(optimal_p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 6a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1A_sp, x2A_sp = model.solve_social_planner()\n",
+    "print(x1A_sp, x2A_sp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting the seed for replicatbility\n",
+    "np.random.seed(2024)\n",
+    "\n",
+    "N_uniform = 50\n",
+    "WA1 = np.random.uniform(size=N_uniform)\n",
+    "WA2 = np.random.uniform(size=N_uniform)\n",
+    "\n",
+    "# Create a list of tuples\n",
+    "W_uniform = [(w1A, w2A) for w1A, w2A in zip(WA1, WA2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Question 8"
    ]
   },
   {
