Added introduction to model

--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# YOUR PROJECT TITLE"
+    "# Ramsey model with housing"
    ]
   },
   {
@@ -57,6 +57,120 @@
     "**Write out the model in equations here.** \n",
     "\n",
     "Make sure you explain well the purpose of the model and comment so that other students who may not have seen it before can follow.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this model project, we extend the Ramsey model to include a housing market. In the first iteration, we solve the model assuming that housing supply is in fixed supply and that the housing stock does not depreciate over time. Most of the model is as described in the lecture notebook on the Ramsey model. Our changes to the mode are marked in <span style=\"color:red\"> *red*</span>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Time:** Discrete and indexed by $t\\in\\{0,1,\\dots\\}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Demographics:** Single infinitely-lived household."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Household:** Households choose non-durable consumption, $C_t$ and durable housing $H_t$ such as to maximize discount lifetime utility. Labor is supplied exogenously, $N_{t}=1$, and earns a wage $w_{t}$. The return on saving is $r_{t+1}$. Utility is CRRA and given by: \n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\tU & =\\max_{\\{C_{t},\\color{red}H_{t}\\color{black}\\}_{t=0}^{\\infty}}\\sum_{t=0}^{\\infty}\\beta^{t}\\left(\\frac{C_{t}^{1-\\sigma}}{1-\\sigma}\\color{red}+\\frac{H_{t}^{1-\\sigma}}{1-\\sigma}\\color{black}\\right),\\beta\\in(0,1),\\sigma>0\\\\\n",
+    "\t& \\text{s.t.}\\\\\n",
+    "\tA_{t}+C_t+\\color{red}q_tH_t\\color{black}& =(1+r_{t})A_{t-1}+w_{t}N_{t} + \\color{red}q_{t}H_{t-1}\\color{black}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where the left hand side of the budget constraint is expenditures on saving, consumption and housing. The right hand side is what is carried over in savings from last period, labor income and the amount of housing held from the last period. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Firms:** Firms rent capital $K_{t-1}$ at the rental rate $r_{t}^{K}$\n",
+    "and hires labor $L_{t}$ at the wage rate $w_{t}$.<br>\n",
+    "Firms have access to the production function\n",
+    "    \n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "Y_{t} &= F(K_{t-1},L_{t}) \\\\ &=\\Gamma_t(\\alpha K_{t-1}^{-\\theta}+(1-\\alpha)L_{t}^{-\\theta})^{\\frac{1}{-\\theta}},\\,\\,\\,\\theta>-1,\\alpha\\in(0,1),\\Gamma_t>0\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Profits are\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\Pi_{t}=Y_{t}-w_{t}L_{t}-r_{t}^{K}K_{t-1}\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Equilibrium:** The following conditions will be satisfied in equilibrium\n",
+    "\n",
+    "1. Households maximize utility\n",
+    "2. Firms maximize profits\n",
+    "3. Labor market clear: $L_{t}=N_{t}=1$\n",
+    "4. Goods market clear: $Y_{t}=C_{t}+I_{t}$\n",
+    "5. <span style=\"color:red\"> Housing market clear:</span>. $\\color{red} \\bar{H}=H_t$\n",
+    "6. Asset market clear: $A_{t}=K_{t}$ and $r_{t}=r_{t}^{k}-\\delta$\n",
+    "7. Capital follows its law of motion: $K_{t}=(1-\\delta)K_{t-1}+I_{t}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Solution**: We can summarize the model in the non-linear equation system\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\boldsymbol{H}(\\boldsymbol{K},\\boldsymbol{C},\\color{red}\\boldsymbol{H}\\color{black},K_{-1})=\\left[\\begin{array}{c}\n",
+    "H_{0}\\\\\n",
+    "H_{1}\\\\\n",
+    "\\begin{array}{c}\n",
+    "\\vdots\\end{array}\n",
+    "\\end{array}\\right]=\\left[\\begin{array}{c}\n",
+    "0\\\\\n",
+    "0\\\\\n",
+    "\\begin{array}{c}\n",
+    "\\vdots\\end{array}\n",
+    "\\end{array}\\right]\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $\\boldsymbol{K} = [K_0,K_1\\dots]$, $\\boldsymbol{C} = [C_0,C_1\\dots]$,  $\\color{red}\\boldsymbol{H} = [H_0,H_1\\dots]$ and\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "H_{t}\n",
+    "=\\left[\\begin{array}{c}\n",
+    "C_{t}^{-\\sigma}-\\beta(1+F_{K}(K_{t},1))C_{t+1}^{-\\sigma}\\\\\n",
+    "K_{t}-[(1-\\delta)K_{t-1} + F(K_{t-1},1)-C_{t}] \\\\\n",
+    "\\color{red} \\bar{H}^{-\\sigma} + \\beta C_{t+1}^{-\\sigma}q_{t+1} - C_t^{-\\sigma}q_t\n",
+    "\\end{array}\\right],\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where the last equation is derived by combining the FOC for housing demand with the assumption of fixed housing supply."
    ]
   },
   {
