Looked at code in module

--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\tU & =\\max_{\\{C_{t},\\color{red}H_{t}\\color{black}\\}_{t=0}^{\\infty}}\\sum_{t=0}^{\\infty}\\beta^{t}\\left(\\frac{C_{t}^{1-\\sigma}}{1-\\sigma}\\color{red}+\\frac{H_{t}^{1-\\sigma}}{1-\\sigma}\\color{black}\\right),\\beta\\in(0,1),\\sigma>0\\\\\n",
+    "\tU & =\\max_{\\{C_{t},\\color{red}H_{t}\\color{white}\\}_{t=0}^{\\infty}}\\sum_{t=0}^{\\infty}\\beta^{t}\\left(\\frac{C_{t}^{1-\\sigma}}{1-\\sigma}\\color{red}+\\frac{H_{t}^{1-\\sigma}}{1-\\sigma}\\color{white}\\right),\\beta\\in(0,1),\\sigma>0\\\\\n",
     "\t& \\text{s.t.}\\\\\n",
     "\tA_{t}+C_t+\\color{red}q_tH_t\\color{black}& =(1+r_{t})A_{t-1}+w_{t}N_{t} + \\color{red}q_{t}H_{t-1}\\color{black}\n",
     "\\end{aligned}\n",
@@ -143,7 +143,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\boldsymbol{H}(\\boldsymbol{K},\\boldsymbol{C},\\color{red}\\boldsymbol{H}\\color{black},K_{-1})=\\left[\\begin{array}{c}\n",
+    "\\boldsymbol{H}(\\boldsymbol{K},\\boldsymbol{C},\\color{red}\\boldsymbol{H}\\color{white},K_{-1})=\\left[\\begin{array}{c}\n",
     "H_{0}\\\\\n",
     "H_{1}\\\\\n",
     "\\begin{array}{c}\n",
