--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -27,9 +27,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of modelproject failed: Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/lib/python3.11/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/opt/anaconda3/lib/python3.11/site-packages/IPython/extensions/autoreload.py\", line 475, in superreload\n",
+      "    module = reload(module)\n",
+      "             ^^^^^^^^^^^^^^\n",
+      "  File \"/opt/anaconda3/lib/python3.11/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 621, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 940, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"/Users/mikkellyngholm/Desktop/projects-2024-mikkel-thomas/modelproject/modelproject.py\", line 5, in <module>\n",
+      "    class RamseyModelClass1():\n",
+      "  File \"/Users/mikkellyngholm/Desktop/projects-2024-mikkel-thomas/modelproject/modelproject.py\", line 84, in RamseyModelClass1\n",
+      "    if do_print:\n",
+      "       ^^^^^^^^\n",
+      "NameError: name 'do_print' is not defined\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from scipy import optimize\n",
@@ -174,6 +207,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initializing the model:\n",
+      "calling .setup()\n",
+      "calling .allocate()\n",
+      "{'C': 3.8, 'Gamma': 0.3, 'r': 0.25, 'w': 2.8, 'rk': 0.3, 'K': 4.0, 'Y': 4}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "namespace(C=3.8, Gamma=0.3, r=0.25, w=2.8, rk=0.3, K=4.0, Y=4)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = RamseyModelClass1()\n",
+    "model.find_steady_state(KY_ss=(4.0,4))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.8"
   },
   "toc-autonumbering": true,
   "vscode": {
