--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -36,30 +36,6 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of modelproject failed: Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/lib/python3.11/site-packages/IPython/extensions/autoreload.py\", line 276, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/opt/anaconda3/lib/python3.11/site-packages/IPython/extensions/autoreload.py\", line 475, in superreload\n",
-      "    module = reload(module)\n",
-      "             ^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/lib/python3.11/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 621, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 940, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"/Users/mikkellyngholm/Desktop/projects-2024-mikkel-thomas/modelproject/modelproject.py\", line 5, in <module>\n",
-      "    class RamseyModelClass1():\n",
-      "  File \"/Users/mikkellyngholm/Desktop/projects-2024-mikkel-thomas/modelproject/modelproject.py\", line 84, in RamseyModelClass1\n",
-      "    if do_print:\n",
-      "       ^^^^^^^^\n",
-      "NameError: name 'do_print' is not defined\n",
-      "]\n"
      ]
     }
    ],
@@ -208,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -218,23 +194,19 @@
       "initializing the model:\n",
       "calling .setup()\n",
       "calling .allocate()\n",
-      "{'C': 3.8, 'Gamma': 0.3, 'r': 0.25, 'w': 2.8, 'rk': 0.3, 'K': 4.0, 'Y': 4}\n"
+      "K_ss = 4.00\n",
+      "Y_ss = 2.00\n",
+      "C_ss = 1.80\n",
+      "Gamma = 0.15\n",
+      "r_ss = 0.10\n",
+      "w_ss = 1.40\n",
+      "rk_ss = 0.15\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "namespace(C=3.8, Gamma=0.3, r=0.25, w=2.8, rk=0.3, K=4.0, Y=4)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = RamseyModelClass1()\n",
-    "model.find_steady_state(KY_ss=(4.0,4))"
+    "model = modelproject.RamseyModelClass1()\n",
+    "model.find_steady_state(KY_ss=(4.0,2))"
    ]
   },
   {
