Changes to intro text

--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\boldsymbol{H}(\\boldsymbol{K},\\boldsymbol{C},\\color{red}\\boldsymbol{H}\\color{white},K_{-1})=\\left[\\begin{array}{c}\n",
+    "\\boldsymbol{H}(\\boldsymbol{K},\\boldsymbol{C}, \\color{red} \\boldsymbol{q}\\color{black},K_{-1})=\\left[\\begin{array}{c}\n",
     "H_{0}\\\\\n",
     "H_{1}\\\\\n",
     "\\begin{array}{c}\n",
@@ -166,7 +166,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "where $\\boldsymbol{K} = [K_0,K_1\\dots]$, $\\boldsymbol{C} = [C_0,C_1\\dots]$,  $\\color{red}\\boldsymbol{H} = [H_0,H_1\\dots]$ and\n",
+    "where $\\boldsymbol{K} = [K_0,K_1\\dots]$, $\\boldsymbol{C} = [C_0,C_1\\dots]$,  $\\color{red}\\boldsymbol{q} = [q_0,q_1\\dots]$ and\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
