Small changed to model project

--- a/modelproject/modelproject.ipynb
+++ b/modelproject/modelproject.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ramsey model with housing"
+    "# Ramsey model with housing and a government sector"
    ]
   },
   {
@@ -92,13 +92,13 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\tU & =\\max_{\\{C_{t},\\color{red}H_{t}\\color{black}\\}_{t=0}^{\\infty}}\\sum_{t=0}^{\\infty}\\beta^{t}\\left(\\frac{C_{t}^{1-\\sigma}}{1-\\sigma}\\color{red}+\\upsilon\\frac{H_{t}^{1-\\sigma_h}}{1-\\sigma_h}\\color{black}\\right),\\beta\\in(0,1),\\sigma>0\\\\\n",
+    "\tU & =\\max_{\\{C_{t},\\color{red}H_{t}, A_t\\color{black}\\}_{t=0}^{\\infty}}\\sum_{t=0}^{\\infty}\\beta^{t}\\left(\\frac{C_{t}^{1-\\sigma}}{1-\\sigma}\\color{red}+\\upsilon\\frac{H_{t}^{1-\\sigma_h}}{1-\\sigma_h}\\color{black}\\right),\\beta\\in(0,1),\\sigma>0\\\\\n",
     "\t& \\text{s.t.}\\\\\n",
-    "\tA_{t}+C_t+\\color{red}q_tH_t\\color{black}& =(1+r_{t})A_{t-1}+w_{t}N_{t} + \\color{red}q_{t}H_{t-1}\\color{black}\n",
+    "\tA_{t}+C_t+\\color{red}q_tH_t\\color{black}& =(1+r_{t})A_{t-1}+w_{t}N_{t} + \\color{red}(q_{t}-\\tau^H_t)H_{t-1}\\color{black}\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "where the left hand side of the budget constraint is expenditures on saving, consumption and housing. The right hand side is what is carried over in savings from last period, labor income and the amount of housing held from the last period. "
+    "where the left hand side of the budget constraint is expenditures on saving, consumption and housing. The right hand side is what is carried over in savings from last period, labor income and the amount of housing held from the last period. $\\tau^H_t$ is a lump-sum tax paid per unit of housing."
    ]
   },
   {
@@ -122,6 +122,18 @@
     "\\Pi_{t}=Y_{t}-w_{t}L_{t}-r_{t}^{K}K_{t-1}\n",
     "\\end{aligned}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Government**: To keep things very simple, we assume that the government is not allowed to borrow nor save, and that the budget will always be balanced. In this case, government consumption will be given by: \n",
+    "\n",
+    "$$\n",
+    "G_t = \\tau^H_t \\bar{H},\n",
+    "$$\n",
+    "where we use the fact that the housing stock is fixed over time."
    ]
   },
   {
