Small updates to documentation

--- a/dataproject/dataproject.ipynb
+++ b/dataproject/dataproject.ipynb
@@ -122,6 +122,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this first chart we do see that geopolitical uncertainty seems to be relativly high in recent years. In particular, our heatmap is \"warmer\" in recent years compared with what we have seen in earlier years."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Chart 2: A new 1915s? - Average Global GPR Index Since 1900 by Five-Year Intervals"
    ]
   },
@@ -161,6 +168,13 @@
    ],
    "source": [
     "dataproject.ridge_gpr(df_gpr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this plot we see that geopolitical risk seems to have sligthly increase from 2000 onwards. It can also be seen that for 2020 onwards, there has be a larger spread in the GPR index. Most importantly, we see that the have been more times where GPR has been significantly higher than in recent years."
    ]
   },
   {
@@ -208,6 +222,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this plot, we show the ideal point estimates. We do maybe see some sligth clustering of the two blocks. In particular, there seems to be opening a gap between the two blocks and countries are moving away from 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Chart 4: A Tale of Two Blocks - Ideal Points Estimates and Military Spending"
    ]
   },
@@ -242,6 +263,13 @@
     "df_idealpoint = pd.read_csv('IdealpointestimatesAll_Sep2023.csv', delimiter=';') # Ideal point estimates\n",
     "\n",
     "dataproject.scatter_mil_ideal(df_military_gdp_spend, df_population, df_idealpoint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this plot we can see that the \"left-leaning\" block is significantly larger in terms of population. "
    ]
   },
   {
@@ -351,6 +379,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From this final plot we see that the deaths from interstate warfare was very large for the first time in +20 years in 2022."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusion"
    ]
   },
@@ -378,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.19"
   },
   "toc-autonumbering": true,
   "vscode": {
