--- a/examproject/exam_2024.ipynb
+++ b/examproject/exam_2024.ipynb
@@ -27,7 +27,11 @@
    "source": [
     "# Write your code here\n",
     "import numpy as np\n",
-    "from types import SimpleNamespace"
+    "from types import SimpleNamespace\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "plt.rcParams.update({\"axes.grid\":True,\"grid.color\":\"black\",\"grid.alpha\":\"0.25\",\"grid.linestyle\":\"--\"})\n",
+    "plt.rcParams.update({'font.size': 14})"
    ]
   },
   {
@@ -471,7 +475,7 @@
     "rng = np.random.default_rng(2024)\n",
     "\n",
     "X = rng.uniform(size=(50,2))\n",
-    "y = rng.uniform(size=(2,))\n"
+    "y = rng.uniform(size=(2,))"
    ]
   },
   {
