Looked at Q3 in problem 1

--- a/examproject/exam_2024 msl.ipynb
+++ b/examproject/exam_2024 msl.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,12 +134,15 @@
     "par.T = 0.0\n",
     "\n",
     "# Question 3\n",
-    "par.kappa = 0.1"
+    "par.kappa = 0.1\n",
+    "\n",
+    "# Numeraire\n",
+    "w = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -183,8 +186,8 @@
       "Market does not clear for p1 = 0.73, p2 = 0.94\n",
       "Market does not clear for p1 = 0.73, p2 = 1.16\n",
       "Market does not clear for p1 = 0.73, p2 = 1.37\n",
-      "Market clears for p1 = 0.73, p2 = 1.58\n",
-      "Market clears for p1 = 0.73, p2 = 1.79\n",
+      "Market does not clear for p1 = 0.73, p2 = 1.58\n",
+      "Market does not clear for p1 = 0.73, p2 = 1.79\n",
       "Market does not clear for p1 = 0.73, p2 = 2.00\n",
       "Market does not clear for p1 = 0.94, p2 = 0.10\n",
       "Market does not clear for p1 = 0.94, p2 = 0.31\n",
@@ -219,7 +222,7 @@
       "Market does not clear for p1 = 1.58, p2 = 0.10\n",
       "Market does not clear for p1 = 1.58, p2 = 0.31\n",
       "Market does not clear for p1 = 1.58, p2 = 0.52\n",
-      "Market clears for p1 = 1.58, p2 = 0.73\n",
+      "Market does not clear for p1 = 1.58, p2 = 0.73\n",
       "Market does not clear for p1 = 1.58, p2 = 0.94\n",
       "Market does not clear for p1 = 1.58, p2 = 1.16\n",
       "Market does not clear for p1 = 1.58, p2 = 1.37\n",
@@ -229,7 +232,7 @@
       "Market does not clear for p1 = 1.79, p2 = 0.10\n",
       "Market does not clear for p1 = 1.79, p2 = 0.31\n",
       "Market does not clear for p1 = 1.79, p2 = 0.52\n",
-      "Market clears for p1 = 1.79, p2 = 0.73\n",
+      "Market does not clear for p1 = 1.79, p2 = 0.73\n",
       "Market does not clear for p1 = 1.79, p2 = 0.94\n",
       "Market does not clear for p1 = 1.79, p2 = 1.16\n",
       "Market does not clear for p1 = 1.79, p2 = 1.37\n",
@@ -250,21 +253,19 @@
     }
    ],
    "source": [
-    "# Define the linspace for p1 and p2\n",
-    "p1_range = np.linspace(0.1, 2.0, 10)\n",
-    "p2_range = np.linspace(0.1, 2.0, 10)\n",
-    "\n",
-    "# Numeraire\n",
-    "w = 1\n",
+    "p1_range = np.linspace(0.1, 2, 10)\n",
+    "p2_range = np.linspace(0.1, 2, 10)\n",
     "\n",
     "def profits(w, p1, p2, par):\n",
     "    # Calculate the profits for the firms\n",
-    "    profits = par.A * (w / p1) ** par.gamma + par.A * (w / p2) ** par.gamma\n",
+    "    profits = (1-par.gamma)/par.gamma * w * (p1 * par.A / w) ** 1/(1-par.gamma) + (1-par.gamma)/par.gamma * w * (p2 * par.A / w) ** 1/(1-par.gamma)\n",
     "    return profits\n",
     "\n",
     "def labor_supply(w, p1, p2, par):\n",
     "    # Calculate the labor supply for the households\n",
-    "    labor_supply = (w / p1) ** (1 - par.alpha) + (w / p2) ** (1 - par.alpha)\n",
+    "    c1 = par.alpha * profits(w, p1, p2, par) / p1\n",
+    "    c2 = (1 - par.alpha) * profits(w, p1, p2, par) / (p2+par.tau)\n",
+    "    labor_supply = c1 ** par.alpha + c2 ** (1 - par.alpha)\n",
     "    return labor_supply\n",
     "\n",
     "def utility(w, p1, p2, par):\n",
@@ -290,7 +291,7 @@
     "        excess_demand_1, excess_demand_2 = market_clearing(w, p1, p2, par)\n",
     "        \n",
     "        # Assuming market clears if excess demand is close to 0 for both goods\n",
-    "        if abs(excess_demand_1) < 0.01 and abs(excess_demand_2) < 0.01:\n",
+    "        if abs(excess_demand_1) < 0.001 and abs(excess_demand_2) < 0.001:\n",
     "            print(f\"Market clears for p1 = {p1:.2f}, p2 = {p2:.2f}\")\n",
     "        else:\n",
     "            print(f\"Market does not clear for p1 = {p1:.2f}, p2 = {p2:.2f}\")"
@@ -306,11 +307,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Equilibrium prices: p1 = 0.10, p2 = 0.10\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your answer here"
+    "# write your answer here\n",
+    "# Calculate the excess demand for good 1\n",
+    "excess_demand_1 = labor_supply(w, p1, p2, par) - profits(w, p1, p2, par)\n",
+    "\n",
+    "# Calculate the excess demand for good 2\n",
+    "excess_demand_2 = labor_supply(w, p2, p1, par) - profits(w, p2, p1, par)\n",
+    "\n",
+    "# Solve for equilibrium prices using Walras' law\n",
+    "p1 = p1_range[np.abs(excess_demand_1).argmin()]\n",
+    "p2 = p2_range[np.abs(excess_demand_2).argmin()]\n",
+    "\n",
+    "# Print the equilibrium prices\n",
+    "print(f\"Equilibrium prices: p1 = {p1:.2f}, p2 = {p2:.2f}\")"
    ]
   },
   {
@@ -340,11 +361,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal tau: 0.1\n",
+      "Optimal T: 0.1\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your answer here"
+    "# write your answer here\n",
+    "# Define the function to calculate SWF\n",
+    "def calculate_swf(tau, T):\n",
+    "    # Calculate the social welfare function\n",
+    "    swf = (1 - tau) * (1 - T)\n",
+    "    return swf\n",
+    "\n",
+    "# Define the range of values for tau and T\n",
+    "tau_range = [0.1, 0.2, 0.3, 0.4, 0.5]\n",
+    "T_range = [0.1, 0.2, 0.3, 0.4, 0.5]\n",
+    "\n",
+    "# Initialize variables to store the maximum SWF and corresponding values of tau and T\n",
+    "max_swf = -float('inf')\n",
+    "opt_tau = None\n",
+    "opt_T = None\n",
+    "\n",
+    "# Iterate over the values of tau and T\n",
+    "for tau in tau_range:\n",
+    "    for T in T_range:\n",
+    "        # Calculate the SWF for the current values of tau and T\n",
+    "        swf = calculate_swf(tau, T)\n",
+    "        \n",
+    "        # Check if the current SWF is greater than the maximum SWF\n",
+    "        if swf > max_swf:\n",
+    "            # Update the maximum SWF and corresponding values of tau and T\n",
+    "            max_swf = swf\n",
+    "            opt_tau = tau\n",
+    "            opt_T = T\n",
+    "\n",
+    "# Print the optimal values of tau and T\n",
+    "print(\"Optimal tau:\", opt_tau)\n",
+    "print(\"Optimal T:\", opt_T)"
    ]
   },
   {
@@ -393,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
